@@ -89,8 +89,9 @@ x10=net.sourceforge.cruisecontrol.publishers.X10Publisher
 xsltlogpublisher=net.sourceforge.cruisecontrol.publishers.XSLTLogPublisher
 
 # email address mapper usable by EmailMapper based publishers
-propertiesmapper=net.sourceforge.cruisecontrol.publishers.email.PropertiesMapper
 ldapmapper=net.sourceforge.cruisecontrol.publishers.email.LDAPMapper
+mavenmapper=net.sourceforge.cruisecontrol.publishers.email.MavenMapper
+propertiesmapper=net.sourceforge.cruisecontrol.publishers.email.PropertiesMapper
 
 # listeners
 lockfilelistener=net.sourceforge.cruisecontrol.listeners.LockFileListener
